[package]
name = "imsg"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "A base protocol providing streams of messages"
license = "MIT OR Apache-2.0"
authors = ["Floris Bruynooghe <flub@devork.be>", "n0 team"]
repository = "https://github.com/n0-computer/imsg"
keywords = ["protocol", "network", "iroh"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
iroh = "0.90.0"
n0-future = "0.1.3"
thiserror = "2.0.12"
tokio = "1.46.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"

[dev-dependencies]
testresult = "0.4.1"
